# Zap

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PROJECT_STRUCTURE.md  README.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: errors.rs  events.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: library.rs  mod.rs  settings.rs
apps/desktop/src/components/layout/: AppShell.tsx  BottomTabs.tsx  RightPanel.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
apps/desktop/src/components/sounds/: CommandPalette.tsx  SoundCard.tsx  SoundContextMenu.tsx  SoundItem.tsx
apps/desktop/src/components/ui/: badge.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  slider.tsx  tabs.tsx
apps/desktop/src/lib/: tauri.ts  types.ts  utils.ts
apps/desktop/src/lib/__tests__/: utils.test.ts
apps/desktop/src/pages/: About.tsx  Dashboard.tsx  Devices.tsx  Library.tsx  Logs.tsx  Settings.tsx  Soundboard.tsx
apps/desktop/src/store/: filters.ts  library.ts  player.ts  ui.ts
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: buffer.rs  decoder.rs  error.rs  lib.rs  mixer.rs  normalization.rs  player.rs
crates/hotkeys/: Cargo.toml
crates/hotkeys/src/: backend.rs  bindings.rs  conflict.rs  error.rs  evdev.rs  lib.rs  manager.rs  x11.rs  xdg_portal.rs
crates/logging/: Cargo.toml
crates/logging/src/: audio.rs  error.rs  file.rs  lib.rs  pipewire.rs  subscriber.rs
crates/pipewire-manager/: Cargo.toml
crates/pipewire-manager/src/: context.rs  devices.rs  error.rs  lib.rs  links.rs  monitor.rs  nodes.rs  stream.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: api.rs  error.rs  lib.rs  loader.rs  manager.rs  sandbox.rs
crates/settings/: Cargo.toml
crates/settings/src/: config.rs  error.rs  io.rs  lib.rs  migration.rs  profiles.rs  themes.rs
crates/shared/: Cargo.toml
crates/shared/src/: commands.rs  errors.rs  events.rs  lib.rs  types.rs  utils.rs
crates/sound-library/: Cargo.toml
crates/sound-library/src/: collection.rs  error.rs  favorites.rs  lib.rs  library.rs  metadata.rs  search.rs  tags.rs  waveform.rs
crates/storage/: Cargo.toml
crates/storage/src/: database.rs  error.rs  lib.rs  migrations.rs  models.rs  repository.rs
crates/virtual-mic/: Cargo.toml
crates/virtual-mic/src/: error.rs  lib.rs  mixer.rs  pipewire.rs  provider.rs  pulseaudio.rs
