[package]
name = "zap-hotkeys"
description = "Global hotkey registration, conflict detection, and key binding management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zap-shared.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
