[package]
name = "zap-logging"
description = "Structured logging with tracing, file rotation, and log viewer support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zap-shared.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
dirs.workspace = true

[lints]
workspace = true
