[package]
name = "zap-pipewire-manager"
description = "PipeWire lifecycle management, virtual devices, and graph monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zap-shared.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
