[package]
name = "zap-settings"
description = "Configuration management with profiles, themes, and import/export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zap-shared.workspace = true
zap-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true

[lints]
workspace = true
