[package]
name = "zap-storage"
description = "SQLite persistence layer with migration support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zap-shared.workspace = true
rusqlite.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
