[package]
name = "zap-virtual-mic"
description = "Virtual microphone abstraction with PipeWire and PulseAudio backends"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zap-shared.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
